--- a/Index.html
+++ b/Index.html
@@ -207,7 +207,9 @@
         <p>Smart Control & Tracking: Manage limits, transactions, and security settings easily via the AU 0101 app.</p>
         <p>1% Fuel Surcharge Waiver: Save on fuel with a 1% waiver at petrol stations across India.</p>
       </div>
+      <a href="form.html" target="_blank">
       <button class="apply-button">Apply Now</button>
+    </a>
     </div>
 
     <!-- Card 2 -->
@@ -224,7 +226,9 @@
         <p>Accepted Nationwide: Use it online, in-store, or while traveling—accepted widely across all major platforms
           and merchants.</p>
       </div>
+    <a href="form.html">
       <button class="apply-button">Apply Now</button>
+    </a>
     </div>
 
   </div>
